# eos-quickstart

./: CMakeLists.txt  PKGBUILD  README.md  eos-quickstart.conf  eos-quickstart.desktop  main.cpp  main.qml  packagemanager.cpp  packagemanager.h  packagemodel.cpp  packagemodel.h
.github/workflows/: gitlab.yml
